package com.constructflow.service.strategy.progress;

public enum ProgressModel {
    TASK_COUNT,
    WEIGHTED_BY_COST,
    MILESTONE_BASED,
    EFFORT_BASED
}
